# CoDecomp

./: CMakeLists.txt  LICENSE  README.md  fpm.toml  mkdocs.yml
docs/: APIs.md  index.md  interface.md
src/: submodule_auto.f90  submodule_interface.f90  submodule_optional.f90  submodule_reallocate.f90
src/decomposition/: module_decomposition.f90  submodule_interface.f90  submodule_io.f90  submodule_manual.f90
src/utility/: module_utility.f90  submodule_convert.f90  submodule_reallocate.f90
test/: module_matrix.f90  test.f90
